logo added, css for language selector added, overlaping of copy room id button and username fixed

--- a/src/App.css
+++ b/src/App.css
@@ -181,7 +181,9 @@ footer a:hover {
 }
 
 .logoImage {
-    height: 60px;
+    width: 150px;
+    height: auto;
+    margin: 10px auto;
 }
 
 .leaveBtn {
@@ -209,7 +211,7 @@ button:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add subtle shadow for button hover */
 }
 
-/*.language-selector {
+.language-selector {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -220,4 +222,37 @@ button:hover {
     border-radius: 5px;
     font-size: 16px;
 }
-*/
+
+.logo-home {
+    width: 100%;
+    height: auto;
+    margin: 20px auto;
+  }
+
+  .logo-container {
+    max-width: 200px; 
+    margin-bottom: 30px;
+  }
+  .aside {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%; /* This ensures the full height of the sidebar */
+  }
+  
+  .asideInner {
+    flex-grow: 1;
+  }
+  
+  .left-bottom {
+    margin-top: auto; /* This pushes the buttons to the bottom */
+  }
+  
+  .copyBtn {
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+  
+  .leaveBtn {
+    width: 100%; 
+  }
